spacing is correct now for fullscreen on my mac

--- a/style.css
+++ b/style.css
@@ -146,16 +146,16 @@ p, li, label {
     margin-bottom: 12%;
 }
 #landing-page {
-    margin-bottom: 14%;
+    margin-bottom: 13.75%;
 }
 #project-0 {
-    margin-bottom: 14%;
+    margin-bottom: 14.25%;
 }
 #project-3 {
-    margin-bottom: 12%;
+    margin-bottom: 10.65%;
 }
 #project-1 {
-    margin-bottom: 11%;
+    margin-bottom: 10.5%;
 }
 #project-2 {
     margin-bottom: 11%;
